--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="js/script.js"></script>
 </head>
 <body>
+ 
+    <input type="text" class="data" id="data"/>
+    <button type="submit" onclick="usingInput()">Submit</button>
+ 
+    
     
 </body>
 </html>
