--- a/desafio-jquery.html
+++ b/desafio-jquery.html
@@ -22,7 +22,7 @@
 </div>
 <div>
 <label for="msg">alertar:</label>
-<input type="checkbox" name="alertar" checked id="alert">
+<input onclick="verifyCheckbox()" type="checkbox" name="alertar" checked id="alert">
 </div>
 <div>
 <label for="msg">Enviar:</label>
