--- a/desafio-jquery.html
+++ b/desafio-jquery.html
@@ -17,6 +17,10 @@
 <input type="email" id="email" />
 </div>
 <div>
+    <label for="salary">Salário:</label>
+    <input type="text" id="salary" />
+    </div>
+<div>
 <label for="msg">Mensagem:</label>
 <textarea id="msg"></textarea>
 </div>
