--- a/desafio-jquery.html
+++ b/desafio-jquery.html
@@ -17,7 +17,7 @@
 <input type="email" id="email" />
 </div>
 <div>
-    <label for="salary">Salário:</label>
+    <label onclick="verifyValueSalary()" for="salary">Salário:</label>
     <input type="text" id="salary" />
     </div>
 <div>
