--- a/desafio-jquery.html
+++ b/desafio-jquery.html
@@ -36,6 +36,7 @@ id="send">
 </form>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="jquery.maskMoney.min.js" type="text/javascript"></script>
 <script src="js/desafio-jquery.js"></script>
 </body>
 </html>
