--- a/desafio-jquery.html
+++ b/desafio-jquery.html
@@ -30,8 +30,8 @@
 </div>
 <div>
 <label for="msg">Enviar:</label>
-<input  onclick="validateInput()" type="button" name="alertar" value="Enviar"
-id="send">
+<button  onclick="validateInput()" type="button" name="alertar" value="Enviar"
+id="send">Enviar</button>
 </div>
 </form>
 
